--- a/MIS Service/MIS Service/MIS Service.csproj
+++ b/MIS Service/MIS Service/MIS Service.csproj
@@ -158,7 +158,7 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\ExportedCSV.cs" />
+    <Compile Include="Controllers\ExportController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PageOperation.cs" />
     <Compile Include="Controllers\PostController.cs" />
@@ -327,6 +327,7 @@
     <Content Include="Views\Post\PostDetail.cshtml" />
     <Content Include="Views\PostLog\AddPostedLog.cshtml" />
     <Content Include="Views\PostLog\PostLogDetail.cshtml" />
+    <Content Include="Views\Export\ExportExcel.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
